--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2936,8 +2936,10 @@
   }
 
   .legal_h2 {
+    position: static;
     display: block;
     overflow: visible;
+    float: none;
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
@@ -2952,6 +2954,7 @@
     -webkit-flex: 0 auto;
     -ms-flex: 0 auto;
     flex: 0 auto;
+    text-align: left;
     white-space: normal;
     -o-object-fit: fill;
     object-fit: fill;
@@ -3108,6 +3111,15 @@
 
   .image-3 {
     margin-bottom: 15px;
+  }
+
+  .legal_h2_title {
+    margin-top: 30px;
+    margin-bottom: 5px;
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 16px;
+    line-height: 16px;
+    text-shadow: 1px 1px 1px #3898ec;
   }
 }
 
