--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1646,8 +1646,8 @@
 }
 
 .ryu_body {
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 15px;
+  line-height: 22.5px;
 }
 
 .utility-page-form {
@@ -1810,6 +1810,31 @@
 .tou_section_22 {
   margin-bottom: 0px;
   padding-bottom: 75px;
+}
+
+@media screen and (min-width: 1280px) {
+  .footer_link-2.footer_icon {
+    color: #3898ec;
+  }
+
+  .ryu_body {
+    font-size: 15px;
+    line-height: 22.5px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .ryu_body {
+    font-size: 15px;
+    line-height: 22.5px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .ryu_body {
+    font-size: 15px;
+    line-height: 22.5px;
+  }
 }
 
 @media screen and (max-width: 991px) {
