--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1012,6 +1012,7 @@
 }
 
 .image {
+  height: 525px;
   margin: 0px;
 }
 
@@ -1810,6 +1811,10 @@
 .tou_section_22 {
   margin-bottom: 0px;
   padding-bottom: 75px;
+}
+
+.image-3 {
+  height: 525px;
 }
 
 @media screen and (min-width: 1280px) {
