Corrected an issue with the footer where the word team wasn't a link, need to finish as client is requesting finally

--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -186,6 +186,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  margin-top: 50px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -3181,7 +3182,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  #w-node-bb3cbd291f06-bfb09bd8 {
+  #w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f06-bfb09bd8 {
     -ms-grid-row: span 1;
     grid-row-start: span 1;
     -ms-grid-row-span: 1;
@@ -3192,7 +3193,7 @@
     grid-column-end: span 1;
   }
 
-  #w-node-bb3cbd291f08-bfb09bd8 {
+  #w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f08-bfb09bd8 {
     -ms-grid-row: span 1;
     grid-row-start: span 1;
     -ms-grid-row-span: 1;
@@ -3205,7 +3206,7 @@
     align-self: start;
   }
 
-  #w-node-bb3cbd291eff-bfb09bd8 {
+  #w-node-_970e7283-14f5-9a72-d95a-bb3cbd291eff-bfb09bd8 {
     -ms-grid-row: span 1;
     grid-row-start: span 1;
     -ms-grid-row-span: 1;
@@ -3216,7 +3217,7 @@
     grid-column-end: span 1;
   }
 
-  #w-node-bb3cbd291f01-bfb09bd8 {
+  #w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f01-bfb09bd8 {
     -ms-grid-row: span 1;
     grid-row-start: span 1;
     -ms-grid-row-span: 1;
@@ -3227,7 +3228,7 @@
     grid-column-end: span 1;
   }
 
-  #w-node-7dade4327f18-bfb09bd8 {
+  #w-node-a5855f2e-be73-11df-a01b-7dade4327f18-bfb09bd8 {
     -ms-grid-row: span 1;
     grid-row-start: span 1;
     -ms-grid-row-span: 1;
@@ -3238,7 +3239,7 @@
     grid-column-end: span 1;
   }
 
-  #w-node-7dade4327f1a-bfb09bd8 {
+  #w-node-a5855f2e-be73-11df-a01b-7dade4327f1a-bfb09bd8 {
     -ms-grid-row: span 1;
     grid-row-start: span 1;
     -ms-grid-row-span: 1;
@@ -3249,7 +3250,7 @@
     grid-column-end: span 1;
   }
 
-  #w-node-7dade4327f1f-bfb09bd8 {
+  #w-node-a5855f2e-be73-11df-a01b-7dade4327f1f-bfb09bd8 {
     -ms-grid-row: span 1;
     grid-row-start: span 1;
     -ms-grid-row-span: 1;
@@ -3260,7 +3261,7 @@
     grid-column-end: span 1;
   }
 
-  #w-node-7dade4327f21-bfb09bd8 {
+  #w-node-a5855f2e-be73-11df-a01b-7dade4327f21-bfb09bd8 {
     -ms-grid-row: span 1;
     grid-row-start: span 1;
     -ms-grid-row-span: 1;
@@ -3275,42 +3276,42 @@
 }
 
 @media screen and (max-width: 479px) {
-  #w-node-bb3cbd291ef5-bfb09bd8 {
+  #w-node-_970e7283-14f5-9a72-d95a-bb3cbd291ef5-bfb09bd8 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
     -ms-grid-column-span: 1;
     grid-column-end: span 1;
   }
 
-  #w-node-bb3cbd291f03-bfb09bd8 {
+  #w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f03-bfb09bd8 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
     -ms-grid-column-span: 1;
     grid-column-end: span 1;
   }
 
-  #w-node-bb3cbd291efc-bfb09bd8 {
+  #w-node-_970e7283-14f5-9a72-d95a-bb3cbd291efc-bfb09bd8 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
     -ms-grid-column-span: 1;
     grid-column-end: span 1;
   }
 
-  #w-node-7dade4327f0e-bfb09bd8 {
+  #w-node-a5855f2e-be73-11df-a01b-7dade4327f0e-bfb09bd8 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
     -ms-grid-column-span: 1;
     grid-column-end: span 1;
   }
 
-  #w-node-7dade4327f15-bfb09bd8 {
+  #w-node-a5855f2e-be73-11df-a01b-7dade4327f15-bfb09bd8 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
     -ms-grid-column-span: 1;
     grid-column-end: span 1;
   }
 
-  #w-node-7dade4327f1c-bfb09bd8 {
+  #w-node-a5855f2e-be73-11df-a01b-7dade4327f1c-bfb09bd8 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
     -ms-grid-column-span: 1;
