--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1829,9 +1829,27 @@
     padding-bottom: 100px;
   }
 
+  .footer_section {
+    padding-top: 30px;
+    padding-bottom: 0px;
+  }
+
   .contact_section {
     padding-top: 100px;
     padding-bottom: 100px;
+  }
+
+  .ryu_tagline {
+    font-style: italic;
+  }
+
+  ._4_block_row {
+    margin-top: -5px;
+  }
+
+  .footer_h3 {
+    margin-top: 0px;
+    font-size: 16px;
   }
 
   .footer_link-2.footer_icon {
@@ -1869,6 +1887,11 @@
   .ryu_body {
     font-size: 15px;
     line-height: 22.5px;
+  }
+
+  .disclaimer_para {
+    padding-top: 7px;
+    border-top: 1px solid #3898ec;
   }
 
   .tou_section_main {
