--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -206,6 +206,7 @@
   margin-bottom: 0px;
   border: 1px none #000;
   font-family: Verdana, Geneva, sans-serif;
+  font-size: 16px;
   text-align: left;
   text-shadow: 1px 1px 1px #3898ec;
 }
@@ -1533,8 +1534,8 @@
 }
 
 .eastern_medicine_icons {
-  width: 128px;
-  height: 128px;
+  width: 100px;
+  height: 100px;
 }
 
 .icon_para {
