--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -38,8 +38,8 @@
   min-height: 100vh;
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-top: 100px;
-  padding-bottom: 75px;
+  padding-top: 125px;
+  padding-bottom: 125px;
 }
 
 .services_section {
@@ -47,8 +47,8 @@
   min-height: 100vh;
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-top: 125px;
+  padding-bottom: 125px;
 }
 
 .footer_section {
@@ -59,8 +59,8 @@
 
 .section_h2 {
   margin-top: 15px;
-  margin-bottom: 15px;
-  font-family: Verdana, Geneva, sans-serif;
+  margin-bottom: 25px;
+  font-family: Inter, sans-serif;
   font-size: 45px;
   line-height: 45px;
   text-align: center;
@@ -115,8 +115,8 @@
   min-height: 100vh;
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-top: 125px;
+  padding-bottom: 125px;
 }
 
 .menu_container {
@@ -146,7 +146,7 @@
   margin-top: 352px;
   margin-right: auto;
   margin-left: auto;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 80px;
   line-height: 80px;
   text-align: center;
@@ -165,7 +165,7 @@
 }
 
 .ryu_tagline {
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   text-align: center;
   text-shadow: 2px 2px 3px #3898ec;
 }
@@ -205,7 +205,7 @@
 .footer_h3 {
   margin-bottom: 0px;
   border: 1px none #000;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 16px;
   text-align: left;
   text-shadow: 1px 1px 1px #3898ec;
@@ -250,7 +250,7 @@
 }
 
 .card_h3 {
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   text-align: center;
   text-shadow: 1px 1px 1px #3898ec;
 }
@@ -351,8 +351,8 @@
 .testimonials_section {
   display: block;
   height: 4000px;
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-top: 125px;
+  padding-bottom: 125px;
 }
 
 .parallax_block_cupping {
@@ -1566,7 +1566,7 @@
 }
 
 .services_h3_mobile {
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   text-align: center;
   text-shadow: 1px 1px 1px #3898ec;
 }
@@ -1649,6 +1649,7 @@
 }
 
 .ryu_body {
+  font-family: Inter, sans-serif;
   font-size: 15px;
   line-height: 22.5px;
 }
@@ -1820,6 +1821,13 @@
   margin: 0px 0px 50px;
 }
 
+.block_text_pre_h2 {
+  color: #3898ec;
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-bottom: 100px;
@@ -1835,9 +1843,22 @@
     padding-bottom: 0px;
   }
 
+  .section_h2 {
+    margin-bottom: 50px;
+  }
+
+  ._2_block.margin_left {
+    margin-left: 25px;
+  }
+
+  ._2_block.margin_right {
+    margin-right: 25px;
+  }
+
   .contact_section {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    height: auto;
+    padding-top: 125px;
+    padding-bottom: 125px;
   }
 
   .ryu_tagline {
@@ -3416,6 +3437,62 @@
   font-family: 'Fa solid 900';
   src: url('../fonts/fa-solid-900.woff2') format('woff2'), url('../fonts/fa-solid-900.eot') format('embedded-opentype'), url('../fonts/fa-solid-900.woff') format('woff'), url('../fonts/fa-solid-900.ttf') format('truetype');
   font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-Bold.ttf') format('truetype'), url('../fonts/Inter-ExtraBold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-ExtraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-Black.ttf') format('truetype');
+  font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
