Starting to clean up icon text

--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -798,7 +798,7 @@
 .section_h2_left {
   margin-top: 0px;
   margin-bottom: 0px;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   text-align: left;
   text-shadow: 1px 1px 1px #3898ec;
 }
@@ -976,7 +976,7 @@
 }
 
 .ailment_h2 {
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 24px;
   line-height: 30px;
   text-align: center;
@@ -1474,7 +1474,7 @@
   display: block;
   margin-top: 75px;
   margin-bottom: 20px;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   color: #fff;
   font-size: 60px;
   line-height: 60px;
@@ -1631,7 +1631,7 @@
 .legal_h2 {
   margin-top: 30px;
   margin-bottom: 5px;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 22px;
   line-height: 22px;
   text-shadow: 1px 1px 1px #3898ec;
@@ -1673,7 +1673,7 @@
 .section_h1 {
   margin-top: 15px;
   margin-bottom: 15px;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 55px;
   line-height: 55px;
   text-align: center;
