--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1,7 +1,3 @@
-.w-form-formrecaptcha {
-  margin-bottom: 8px;
-}
-
 .w-layout-grid {
   display: -ms-grid;
   display: grid;
@@ -12,6 +8,10 @@
   grid-template-rows: auto auto;
   grid-row-gap: 16px;
   grid-column-gap: 16px;
+}
+
+.w-form-formrecaptcha {
+  margin-bottom: 8px;
 }
 
 .hero_section {
@@ -1528,6 +1528,10 @@
   text-align: left;
 }
 
+.list {
+  font-weight: 700;
+}
+
 .nav-menu {
   position: relative;
   direction: ltr;
@@ -1850,6 +1854,64 @@
   font-size: 10px;
 }
 
+.hours_grid_block {
+  padding-top: 7px;
+  padding-bottom: 0px;
+  -ms-grid-columns: 0.25fr 1fr;
+  grid-template-columns: 0.25fr 1fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+  border-top: 1px solid #3898ec;
+  text-align: left;
+}
+
+._5_block_row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-top: 50px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+}
+
+._5_block {
+  width: 20%;
+  margin: 0px 15px;
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+}
+
+._5_block_right {
+  width: 20%;
+  margin: 0px 0px 0px 7.5px;
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+}
+
+._5_block_left {
+  width: 20%;
+  margin: 0px 7.5px 0px 0px;
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+}
+
+.gallery_image {
+  width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 30%;
+  object-position: 50% 30%;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-bottom: 100px;
@@ -1958,6 +2020,10 @@
 
   .block_text_pre_h2 {
     padding-top: 0px;
+  }
+
+  ._5_block_row {
+    margin-top: -5px;
   }
 }
 
@@ -2374,6 +2440,14 @@
     height: 450px;
     margin-top: 50px;
     margin-bottom: 15px;
+  }
+
+  ._5_block_row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
   }
 }
 
@@ -3309,6 +3383,57 @@
   .bio_img {
     height: 375px;
     margin-bottom: 15px;
+  }
+
+  .hours_grid_block {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  ._5_block_row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+  }
+
+  ._5_block {
+    display: block;
+    width: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+  }
+
+  ._5_block_right {
+    display: block;
+    width: 100%;
+    margin-left: 0px;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+  }
+
+  ._5_block_left {
+    display: block;
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
   }
 }
 
