--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -121,9 +121,17 @@
 }
 
 .menu_container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   width: 90%;
   margin-right: auto;
   margin-left: auto;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
 }
 
@@ -297,6 +305,7 @@
 .footer_grid_1_block {
   padding-top: 7px;
   padding-bottom: 0px;
+  grid-column-gap: 0px;
   -ms-grid-columns: 0.25fr 1fr;
   grid-template-columns: 0.25fr 1fr;
   -ms-grid-rows: auto;
@@ -1286,6 +1295,7 @@
 }
 
 .nav_link.w--current {
+  color: #3898ec;
   font-size: 14px;
   line-height: 21px;
   font-weight: 700;
@@ -1495,11 +1505,14 @@
 }
 
 .list {
-  font-weight: 700;
+  padding-left: 0px;
+  font-weight: 400;
 }
 
 .nav-menu {
   position: relative;
+  margin-right: 0px;
+  margin-left: auto;
   direction: ltr;
   text-align: center;
 }
@@ -1664,13 +1677,14 @@
   width: 100%;
   height: 100%;
   margin-bottom: 0px;
-  padding: 10px;
+  padding: 0px;
 }
 
 ._360_frame_block {
   width: 50%;
-  height: 500px;
+  height: 400px;
   margin-bottom: 15px;
+  padding: 10px;
 }
 
 .paragraph-8 {
@@ -1686,7 +1700,7 @@
 }
 
 .footer_hours {
-  padding-left: 30px;
+  padding-left: 0px;
 }
 
 ._2_block_row_info {
@@ -1994,6 +2008,37 @@
   transform-style: preserve-3d;
 }
 
+.nav_bar_h3 {
+  margin-top: 15px;
+  margin-bottom: 0px;
+  border: 1px none #000;
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  text-align: left;
+  text-shadow: 1px 1px 1px #3898ec;
+}
+
+._2_block_row_mini {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+._2_block_row_mini.margin_bottom {
+  margin-bottom: 15px;
+}
+
+._2_block_row_mini.margin_top {
+  margin-top: 15px;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-bottom: 100px;
@@ -2110,6 +2155,11 @@
 
   .block_text_pre_h2_left {
     padding-top: 0px;
+  }
+
+  .nav_bar_h3 {
+    margin-top: 0px;
+    font-size: 16px;
   }
 }
 
@@ -2518,6 +2568,35 @@
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row;
+  }
+
+  .nav_bar_h3 {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  ._2_block_row_mini {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+
+  ._2_block_row_mini.margin_bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  ._2_block_row_mini.margin_top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 
@@ -3429,6 +3508,26 @@
   .arrow-wrap {
     padding-top: 15px;
     padding-bottom: 15px;
+  }
+
+  .nav_bar_h3 {
+    text-align: center;
+  }
+
+  ._2_block_row_mini {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
