--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1392,7 +1392,7 @@
 }
 
 .the-content._2 {
-  display: block;
+  display: none;
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
@@ -1402,7 +1402,7 @@
 }
 
 .the-content._5 {
-  display: block;
+  display: none;
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
@@ -1412,7 +1412,7 @@
 }
 
 .the-content._3 {
-  display: block;
+  display: none;
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
@@ -1422,7 +1422,7 @@
 }
 
 .the-content._6 {
-  display: block;
+  display: none;
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
@@ -1432,7 +1432,7 @@
 }
 
 .the-content._4 {
-  display: block;
+  display: none;
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
@@ -2324,6 +2324,22 @@
 
   ._2_block_middle {
     width: 60%;
+  }
+
+  .the-content._2 {
+    display: block;
+  }
+
+  .the-content._5 {
+    display: block;
+  }
+
+  .the-content._3 {
+    display: block;
+  }
+
+  .the-content._6 {
+    display: block;
   }
 
   .services_content_h3 {
