--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -345,7 +345,7 @@
 
 .contact_page_section {
   height: auto;
-  padding: 75px 75px 0px;
+  padding: 75px 0px 0px;
 }
 
 .testimonial_page_section {
@@ -2057,6 +2057,14 @@
   font-weight: 700;
 }
 
+.success-message {
+  background-color: #f0f7ff;
+}
+
+.success-message-2 {
+  background-color: #f0f7ff;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-bottom: 100px;
@@ -2176,7 +2184,7 @@
   }
 
   .nav_bar_h3 {
-    margin-top: 0px;
+    margin-top: 15px;
     font-size: 16px;
   }
 }
@@ -2190,12 +2198,20 @@
   .site_map_section {
     height: 65vh;
   }
+
+  .nav_bar_h3 {
+    margin-top: 15px;
+  }
 }
 
 @media screen and (min-width: 1920px) {
   .ryu_body {
     font-size: 15px;
     line-height: 22.5px;
+  }
+
+  .nav_bar_h3 {
+    margin-top: 15px;
   }
 }
 
