--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2070,6 +2070,29 @@
   color: #3898ec;
 }
 
+.lottie-animation-2 {
+  width: 35px;
+  height: 35px;
+  margin-top: -10px;
+  margin-bottom: -1px;
+  margin-left: -5px;
+  padding-bottom: 0px;
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+
+.div-block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-bottom: 100px;
