--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -302,7 +302,7 @@
   font-weight: 700;
 }
 
-.footer_grid_1_block {
+.footer_grid_hours_block {
   padding-top: 7px;
   padding-bottom: 0px;
   grid-column-gap: 0px;
@@ -1808,7 +1808,7 @@
 }
 
 .block_text_pre_h2_left {
-  margin-top: 20px;
+  margin-top: 5px;
   margin-bottom: 20px;
   color: #3898ec;
   font-weight: 700;
@@ -2093,14 +2093,33 @@
   align-items: center;
 }
 
+.arrow-image-mobile-left {
+  display: none;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.footer_grid_1_block {
+  padding-top: 7px;
+  padding-bottom: 0px;
+  grid-column-gap: 0px;
+  -ms-grid-columns: 0.25fr 1fr;
+  grid-template-columns: 0.25fr 1fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+  border-top: 1px solid #3898ec;
+  text-align: left;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
-    padding-bottom: 100px;
+    padding-top: 125px;
+    padding-bottom: 125px;
   }
 
   .services_section {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 125px;
+    padding-bottom: 125px;
   }
 
   .footer_section {
@@ -2144,7 +2163,12 @@
   }
 
   .contact_page_section {
-    padding: 75px 0px;
+    padding: 125px 0px;
+  }
+
+  .testimonial_page_section {
+    padding-top: 125px;
+    padding-bottom: 125px;
   }
 
   .testimonials_section {
@@ -2153,8 +2177,8 @@
   }
 
   .conditions_treated_page {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 125px;
+    padding-bottom: 125px;
   }
 
   .ryu_button_testimonial {
@@ -2162,9 +2186,18 @@
     margin-top: 313px;
   }
 
+  .ryu_button_schedule {
+    margin-bottom: 0px;
+  }
+
   .services_intro_section {
-    padding-top: 100px;
+    padding-top: 125px;
     padding-bottom: 100px;
+  }
+
+  .services_outro_section {
+    padding-top: 100px;
+    padding-bottom: 125px;
   }
 
   .our_team_section {
@@ -2172,8 +2205,12 @@
     padding-bottom: 100px;
   }
 
+  .privacy_section_main {
+    padding-top: 125px;
+  }
+
   .privacy_section_14 {
-    padding-bottom: 100px;
+    padding-bottom: 125px;
   }
 
   .ryu_body {
@@ -2187,11 +2224,11 @@
   }
 
   .tou_section_main {
-    padding-top: 100px;
+    padding-top: 125px;
   }
 
   .tou_section_22 {
-    padding-bottom: 100px;
+    padding-bottom: 125px;
   }
 
   .site_map_section {
@@ -2430,6 +2467,10 @@
     height: 300px;
   }
 
+  .block_text_pre_h2_left {
+    margin-top: 0px;
+  }
+
   .arrow-image-mobile {
     position: relative;
     left: 55px;
@@ -2466,11 +2507,20 @@
   .arrow_image_right {
     display: none;
   }
+
+  .arrow-image-mobile-left {
+    position: relative;
+    left: 55px;
+    display: block;
+    margin-right: 200px;
+    -webkit-transform: rotateX(0deg) rotateY(180deg) rotateZ(0deg);
+    transform: rotateX(0deg) rotateY(180deg) rotateZ(0deg);
+  }
 }
 
 @media screen and (max-width: 767px) {
   ._2_block {
-    width: 50%;
+    width: 100%;
   }
 
   ._2_block.margin_left {
@@ -2492,11 +2542,38 @@
   }
 
   ._4_block_row {
-    -webkit-box-orient: horizontal;
+    -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  ._4_block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
   }
 
   .footer_h3 {
@@ -2512,6 +2589,19 @@
     grid-template-columns: 1fr;
     -ms-grid-rows: auto auto auto;
     grid-template-rows: auto auto auto;
+  }
+
+  .footer_grid_2_block {
+    width: 300px;
+  }
+
+  .footer_link {
+    font-size: 15px;
+    line-height: 22.5px;
+  }
+
+  .footer_grid_hours_block {
+    width: 300px;
   }
 
   ._65_block.margin_left {
@@ -2585,10 +2675,10 @@
 
   ._2_block_row {
     -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-    -webkit-flex-direction: column-reverse;
-    -ms-flex-direction: column-reverse;
-    flex-direction: column-reverse;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 
   ._2_block_row.margin_bottom {
@@ -2621,9 +2711,15 @@
     line-height: 16px;
   }
 
+  .ryu_360_block {
+    height: 300px;
+  }
+
   ._360_frame_block {
-    width: 70%;
-    height: 250px;
+    width: 100%;
+    height: auto;
+    -o-object-fit: contain;
+    object-fit: contain;
   }
 
   .paragraph-8 {
@@ -2632,6 +2728,15 @@
 
   .hours_block {
     width: 30%;
+  }
+
+  .footer_hours {
+    font-size: 15px;
+    line-height: 22.5px;
+  }
+
+  .disclaimer_para {
+    width: 300px;
   }
 
   .bio_img {
@@ -2646,6 +2751,10 @@
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
   }
 
   .nav_bar_h3 {
@@ -2654,11 +2763,11 @@
   }
 
   ._2_block_row_mini {
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
-    -webkit-flex-direction: column-reverse;
-    -ms-flex-direction: column-reverse;
-    flex-direction: column-reverse;
+    -webkit-flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
   }
 
   ._2_block_row_mini.margin_bottom {
@@ -2675,6 +2784,22 @@
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+  }
+
+  .footer_grid_1_block {
+    width: 300px;
+    -ms-grid-columns: 1.25fr;
+    grid-template-columns: 1.25fr;
+  }
+
+  .lightbox-link {
+    -o-object-fit: fill;
+    object-fit: fill;
+  }
+
+  .image-2 {
+    -o-object-fit: fill;
+    object-fit: fill;
   }
 }
 
@@ -2696,6 +2821,10 @@
     display: -ms-flexbox;
     display: flex;
     height: 250px;
+  }
+
+  ._2_block {
+    width: 100%;
   }
 
   ._2_block.margin_left {
@@ -2785,11 +2914,16 @@
     line-height: 18px;
   }
 
-  .footer_grid_1_block {
+  .footer_grid_hours_block {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
+  }
+
+  .footer_link-2.footer_icon {
+    font-size: 22px;
+    line-height: 22px;
   }
 
   .footer_icons {
@@ -3606,6 +3740,22 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+  }
+
+  .arrow-image-mobile-left {
+    left: auto;
+    right: 55px;
+    -webkit-transform: rotateX(0deg) rotateY(180deg) rotateZ(0deg);
+    transform: rotateX(0deg) rotateY(180deg) rotateZ(0deg);
+  }
+
+  .footer_grid_1_block {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-grid-columns: 0.25fr;
+    grid-template-columns: 0.25fr;
   }
 }
 
